Add filename property into ScriptCommand model

--- a/raycast-extensions.json
+++ b/raycast-extensions.json
@@ -7,6 +7,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "pause.applescript",
         "icon" : "⏸",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -18,6 +19,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "play.applescript",
         "icon" : "▶️",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -29,6 +31,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "play-pause.applescript",
         "icon" : "⏯️",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -40,6 +43,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "next-track.applescript",
         "icon" : "⏭",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -57,6 +61,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "open-library.sh",
         "icon" : "📂",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -68,6 +73,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "open-applications.sh",
         "icon" : "📂",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -79,6 +85,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "open-utilities.sh",
         "icon" : "📂",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -90,6 +97,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "open-desktop.sh",
         "icon" : "📂",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -101,6 +109,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "open-documents.sh",
         "icon" : "📂",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -112,6 +121,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "open-home.sh",
         "icon" : "📂",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -123,6 +133,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "open-downloads.sh",
         "icon" : "📂",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -140,6 +151,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "empty-trash.applescript",
         "icon" : "🗑",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -151,6 +163,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "quit-all-apps.swift",
         "icon" : "💥",
         "mode" : "silent",
         "needsConfirmation" : true,
@@ -165,6 +178,7 @@
         },
         "currentDirectoryPath" : null,
         "description" : "Script Command to show and hide files and folders starting with \".\" (dot) which on Unix, means that is a hidden file\/folder",
+        "filename" : "toggle-hidden-files.applescript",
         "icon" : "👓",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -179,6 +193,7 @@
         },
         "currentDirectoryPath" : null,
         "description" : "Script Command to switch between the system appearance, light and dark mode.",
+        "filename" : "toggle-system-appearance.applescript",
         "icon" : "🌗",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -190,6 +205,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "eject-all-disks.applescript",
         "icon" : "📀",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -201,6 +217,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "toggle-desktop-icons.applescript",
         "icon" : "🖥",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -212,6 +229,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "restart.applescript",
         "icon" : "♻️",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -223,6 +241,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "shutdown.applescript",
         "icon" : "🛌",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -234,6 +253,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "sleep.applescript",
         "icon" : "😴",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -251,6 +271,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "open-scriptCommandsRepository.sh",
         "icon" : "📜",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -268,6 +289,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "encode-base64.sh",
         "icon" : "💻",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -279,6 +301,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "decode-jwt.sh",
         "icon" : "images\/jwt-logo.png",
         "mode" : "fullOutput",
         "needsConfirmation" : null,
@@ -290,6 +313,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "get-local-ip-v4.sh",
         "icon" : "🌐",
         "mode" : "compact",
         "needsConfirmation" : null,
@@ -301,6 +325,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "get-external-ip-v4.sh",
         "icon" : "🌐",
         "mode" : "compact",
         "needsConfirmation" : null,
@@ -312,6 +337,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "generate-uuid.sh",
         "icon" : "💻",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -323,6 +349,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "get-external-ip-v6.sh",
         "icon" : "🌐",
         "mode" : "compact",
         "needsConfirmation" : null,
@@ -334,6 +361,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "decode-base64.sh",
         "icon" : "💻",
         "mode" : "silent",
         "needsConfirmation" : null,
@@ -345,6 +373,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "prettify-json.sh",
         "icon" : "💻",
         "mode" : "fullOutput",
         "needsConfirmation" : null,
@@ -356,6 +385,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "clear-derived-data.sh",
         "icon" : "🧹",
         "mode" : "compact",
         "needsConfirmation" : null,
@@ -367,6 +397,7 @@
         "author" : null,
         "currentDirectoryPath" : null,
         "description" : null,
+        "filename" : "get-local-ip-v6.sh",
         "icon" : "🌐",
         "mode" : "compact",
         "needsConfirmation" : null,
