--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,9 +2,9 @@ name: Documentation
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master, Extensions-Collector-Tool]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master, Extensions-Collector-Tool]
 
 defaults:
   run:
