--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -28,10 +28,7 @@ jobs:
     - name: Generate Script Commands Documentation
       run: |
         ./toolkit generate-documentation ../../
-
-    - name: Commit files
-      run: |
-        if `git status | grep -q "nothing added to commit"`; then
+        if `git status | grep -q "nothing to commit"`; then
           exit 0;
         else
           git config --local user.email "bot@raycast.com" &&
