--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation
 
 on:
   push:
-    branches: [ master, Extensions-Collector-Tool]
+    branches: [ master ]
 
 defaults:
   run:
