Update documentation workflow to fix typo

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -9,7 +9,7 @@ defaults:
     working-directory: Tools/Toolkit
 
 jobs:
-  generateDocumenation:
+  generateDocumentation:
     runs-on: macos-latest
 
     steps:
