Remove pull request branch

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation
 
 on:
   push:
-    branches: [ master, toolkit/improvements ]
+    branches: [ master ]
 
 jobs:
   generateDocumentation:
