🚨 Resolve ALL swiftlint warnings
Signed-off-by: Matthew Gleich <email@mattglei.ch>

--- a/Tools/Toolkit/.swiftlint.yml
+++ b/Tools/Toolkit/.swiftlint.yml
@@ -40,8 +40,7 @@ indentation_width:
 trailing_comma:
   mandatory_comma: true
 file_header:
-  required_pattern: |
-    \/\/ Copyright © \d{4} Raycast\. All rights reserved\.
+  required_pattern: ([Copyright (c) 2020 Raycast. All rights reserved.])\w+
 identifier_name:
   min_length:
     error: 3
