--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -16,6 +16,7 @@ disabled_rules:
   - type_name
   - function_body_length
   - type_body_length
+  - indentation_width
 opt_in_rules:
   - indentation_width
   - array_init
@@ -35,8 +36,6 @@ opt_in_rules:
   - vertical_whitespace_closing_braces
   - vertical_whitespace_opening_braces
   - yoda_condition
-indentation_width:
-  indentation_width: 2
 trailing_comma:
   mandatory_comma: true
 file_header:
