Add implementation for set-executable

--- a/.github/workflows/check-scripts-executable.yml
+++ b/.github/workflows/check-scripts-executable.yml
@@ -5,19 +5,38 @@ on:
     branches: [ master ]
 
 jobs:
-  checkScriptsExecutable:
+  generateDocumentation:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Check and adjust scripts
-      run: |
-        ./Tools/check-scripts-executable.sh
-    
-    - name: Push changes
-      if: success()
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref }}
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
+
+      - name: Build Toolkit
+        run: |
+          make build
+
+      - name: Check and adjust scripts
+        run: |
+          make set-executable-and-commit
+
+      - name: Push changes
+        if: success()
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.RAYCAST_BOT_ACCESS_TOKEN }}
+          branch: ${{ github.ref }}
+
+      - name: Re-pull on failure
+        if: failure()
+        run: git pull origin ${{ github.ref }} --autostash --rebase -X ours
+
+      - name: Re-push on failure
+        if: failure()
+        uses: ad-m/github-push-action@master
+        with:
+          branch: ${{ github.ref }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
