Add improvements branch to test Github Actions

--- a/.github/workflows/check-scripts-executable.yml
+++ b/.github/workflows/check-scripts-executable.yml
@@ -2,7 +2,7 @@ name: Check scripts executable
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, Toolkit/Improvements ]
 
 jobs:
   generateDocumentation:
