--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,6 +19,10 @@ jobs:
         run: |
           make build
 
+      - name: Check and adjust scripts
+        run: |
+          make set-executable-and-commit
+
       - name: Generate Script Commands Documentation
         run: |
           make gen-docs-and-commit
