--- a/.github/workflows/script-commands.yml
+++ b/.github/workflows/script-commands.yml
@@ -2,7 +2,7 @@ name: Set as Executablem and Generate Documentation
 
 on:
   push:
-    branches: [ master, Toolkit/Improvements ]
+    branches: [ master ]
 
 jobs:
   setAsExecutableAndGenerateDocumentation:
