--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -2,6 +2,7 @@ daysUntilStale: 30
 daysUntilClose: 7
 exemptLabels:
   - security
+  - enhancement
 staleLabel: wontfix
 markComment: >
   This issue/pull request has been automatically marked as stale because it has not had
