--- a/commands/extensions.json
+++ b/commands/extensions.json
@@ -522,7 +522,7 @@
           "refreshTime" : null,
           "schemaVersion" : 1,
           "title" : "Markdown Table",
-          "updatedAt" : "2021-11-03T20:05:09+00:00"
+          "updatedAt" : "2021-11-03T20:04:02+00:00"
         },
         {
           "authors" : [
@@ -579,6 +579,34 @@
           "schemaVersion" : 1,
           "title" : "Unix Time Reader From Clipboard",
           "updatedAt" : "2021-03-30T15:34:59+00:00"
+        },
+        {
+          "authors" : [
+            {
+              "name" : "Diego Lopes",
+              "url" : "https:\/\/github.com\/Dihgg"
+            }
+          ],
+          "createdAt" : "2021-11-04T07:20:46-03:00",
+          "currentDirectoryPath" : "~",
+          "description" : "Decode QR Code from screenshot to clipboard using https:\/\/qrserver.com\/",
+          "filename" : "qr-code-screenshot-to-text.sh",
+          "hasArguments" : false,
+          "icon" : {
+            "dark" : null,
+            "light" : "images\/qrcode.icns"
+          },
+          "identifier" : "dd588b0008181dc53aab2019603ca17b",
+          "isTemplate" : false,
+          "language" : "bash",
+          "mode" : "silent",
+          "needsConfirmation" : false,
+          "packageName" : "QR Code",
+          "path" : "conversions\/",
+          "refreshTime" : null,
+          "schemaVersion" : 1,
+          "title" : "Screenshot QR Code to Clipboard",
+          "updatedAt" : "2021-11-04T07:20:46-03:00"
         },
         {
           "authors" : [
@@ -4955,6 +4983,62 @@
         {
           "authors" : [
             {
+              "name" : "Astrit Malsia",
+              "url" : "https:\/\/github.com\/astrit"
+            }
+          ],
+          "createdAt" : "2021-10-26T02:13:10+02:00",
+          "currentDirectoryPath" : null,
+          "description" : "Copy Wi-Fi password from current session",
+          "filename" : "wifi-password.sh",
+          "hasArguments" : false,
+          "icon" : {
+            "dark" : null,
+            "light" : "📟"
+          },
+          "identifier" : "3da4fa8456e609ec2fd7fbadf9ab49a0",
+          "isTemplate" : false,
+          "language" : "bash",
+          "mode" : "silent",
+          "needsConfirmation" : null,
+          "packageName" : "System",
+          "path" : "system\/",
+          "refreshTime" : null,
+          "schemaVersion" : 1,
+          "title" : "Copy Wi-Fi Password",
+          "updatedAt" : "2021-11-03T20:29:35+00:00"
+        },
+        {
+          "authors" : [
+            {
+              "name" : "Astrit",
+              "url" : "https:\/\/github.com\/astrit"
+            }
+          ],
+          "createdAt" : "2021-11-07T13:19:22+01:00",
+          "currentDirectoryPath" : null,
+          "description" : "A script command to enable and disable .DS_Store",
+          "filename" : "toggle-ds-store.applescript",
+          "hasArguments" : false,
+          "icon" : {
+            "dark" : null,
+            "light" : "🧬"
+          },
+          "identifier" : "3c4ebd8411dc67d65ea9d93787e1cfe1",
+          "isTemplate" : false,
+          "language" : "applescript",
+          "mode" : "silent",
+          "needsConfirmation" : null,
+          "packageName" : "System",
+          "path" : "system\/",
+          "refreshTime" : null,
+          "schemaVersion" : 1,
+          "title" : "Toggle .DS_Store",
+          "updatedAt" : "2021-11-07T13:19:22+01:00"
+        },
+        {
+          "authors" : [
+            {
               "name" : "Jesse Claven",
               "url" : "https:\/\/github.com\/jesse-c"
             }
@@ -5778,7 +5862,7 @@
               "refreshTime" : null,
               "schemaVersion" : 1,
               "title" : "Switch Audio to <Device Name>",
-              "updatedAt" : "2021-04-16T19:18:39+03:00"
+              "updatedAt" : "2021-11-07T15:24:00-05:00"
             },
             {
               "authors" : [
@@ -8248,6 +8332,34 @@
               "schemaVersion" : 1,
               "title" : "Open Pull Requests page",
               "updatedAt" : "2021-03-18T11:30:06+00:00"
+            },
+            {
+              "authors" : [
+                {
+                  "name" : "Vince Picone",
+                  "url" : "https:\/\/github.com\/vpicone"
+                }
+              ],
+              "createdAt" : "2021-03-17T17:31:38+00:00",
+              "currentDirectoryPath" : null,
+              "description" : "Display number of Pull Requests requesting your review",
+              "filename" : "github-review-requests.template.rb",
+              "hasArguments" : false,
+              "icon" : {
+                "dark" : "images\/github-logo-iconDark.png",
+                "light" : "images\/github-logo.png"
+              },
+              "identifier" : "61586867ab7b6b2efa596bce302ed064",
+              "isTemplate" : true,
+              "language" : "ruby",
+              "mode" : "inline",
+              "needsConfirmation" : null,
+              "packageName" : "GitHub",
+              "path" : "developer-utils\/github\/",
+              "refreshTime" : "5m",
+              "schemaVersion" : 1,
+              "title" : "Show Review Requests",
+              "updatedAt" : "2021-11-03T15:03:45-05:00"
             },
             {
               "authors" : [
@@ -14820,7 +14932,7 @@
               "refreshTime" : null,
               "schemaVersion" : 1,
               "title" : "DeepL App Translate",
-              "updatedAt" : "2021-04-18T01:23:05+02:00"
+              "updatedAt" : "2021-11-04T11:22:42+01:00"
             }
           ]
         },
@@ -15965,7 +16077,7 @@
               "refreshTime" : null,
               "schemaVersion" : 1,
               "title" : "OCR Screenshot",
-              "updatedAt" : "2021-09-28T12:28:19-03:00"
+              "updatedAt" : "2021-11-05T00:12:23+03:00"
             }
           ]
         },
@@ -17625,6 +17737,6 @@
   "metadata" : [
 
   ],
-  "totalScriptCommands" : 616,
-  "updatedAt" : "2021-11-03T20:05:09Z"
+  "totalScriptCommands" : 620,
+  "updatedAt" : "2021-11-08T12:30:27Z"
 }
