--- a/.github/workflows/script-commands.yml
+++ b/.github/workflows/script-commands.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   scriptCommands:
-    runs-on: macos-11
+    runs-on: macos-12
 
     steps:
       - uses: actions/checkout@v2
@@ -14,11 +14,13 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Xcode
-        uses: raycast/github-actions/setup-xcode@master
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
 
       - name: Setup GIT
         uses: raycast/github-actions/setup-git@v1.1.0
-        
+
       - name: Build Toolkit
         run: |
           make build
