CI: update to Xcode 16.1

--- a/.github/workflows/script-commands.yml
+++ b/.github/workflows/script-commands.yml
@@ -14,9 +14,7 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Xcode
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: 13.4.1
+        uses: raycast/github-actions/setup-xcode@xcode-16.1.x
 
       - name: Setup GIT
         uses: raycast/github-actions/setup-git@v1.1.0
