Add text analysis script with multiple analysis types and language support

--- a/commands/productivity/openai/.env.example
+++ b/commands/productivity/openai/.env.example
@@ -6,6 +6,9 @@ OPENAI_API_KEY=sk-1234
 # Format: comma-separated list of two languages (e.g., "fr,en" for French-English)
 LANGS=fr,en
 
+# Default language for translations (e.g., "fr" for French)
+DEFAULT_LANG=fr
+
 # Text Improvement Settings
 # Set to "true" to use GPT-4o-mini for additional text improvement after translation
 FIX_TEXT=true
