Add configurable LLM API support with flexible base URL and headers

--- a/commands/productivity/ai-assistant/.env.example
+++ b/commands/productivity/ai-assistant/.env.example
@@ -2,6 +2,13 @@
 # Get your API key from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=sk-1234
 
+# LLM API Configuration
+# Get your API key from your LLM provider
+# LLM_API_BASE=https://api.deepseek.com/v1  # Leave it commented if you want to use OpenAI (https://api.openai.com/v1)
+# LLM_MODEL=deepseek-chat  # Use it if you want to use a different model, by default it's gpt-4o-mini
+# LLM_EXTRA_HEADERS={"X-Custom-Header": "value"}  # Optional extra headers as JSON
+# LLM_EXTRA_QUERY={"custom_param": "value"}  # Optional extra query parameters as JSON
+
 # Translation Configuration
 # Format: comma-separated list of two languages (e.g., "fr,en" for French-English)
 LANGS=fr,en
